完善图片预览

--- a/src/main/resources/templates/fileTest.html
+++ b/src/main/resources/templates/fileTest.html
@@ -85,7 +85,7 @@
                 var settings = {
                     "async": true,
                     "crossDomain": true,
-                    "url": "http://localhost:12345/json/file/add",
+                    "url": "/json/file/add",
                     "method": "POST",
                     "processData": false,   //不需要对数据做任何预处理
                     "contentType": false,   //不设置数据格式
