--- a/src/main/resources/templates/fileTest.html
+++ b/src/main/resources/templates/fileTest.html
@@ -55,6 +55,10 @@
         </div>
     </form>
 
+    <div id="img">
+        <img src="fileTest.html" name="sfa">
+    </div>
+
     <script>
         //Demo
         layui.use('form', function(){
@@ -98,12 +102,25 @@
                 $.ajax(settings).done(function (response) {
                     response = JSON.parse(response);
                     console.log(response);
+
                     if(response.code == 0){
                         layer.msg(" 提交成功 ");
+
+                        for (var i = 0; i < response.data.length; i++) {
+                            $("#img").append(createImg(response.data[i]));
+                        }
+
                     }else {
                         layer.msg("1"+JSON.stringify(response.msg));
                     }
                 });
+
+                function createImg(imgData) {
+                    var imgHtml = "<img src=\""+ imgData.previewUrl +"\" name=\""+ imgData.fileFullName +"\">";
+
+                    return imgHtml;
+                }
+
             }
         });
     </script>
